--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
         <div class="container">
           <div id="items-carrinho" class="row mr-0 ml-0 hidden"></div>
           <div id="local-entrega" class="row mr-0 ml-0 hidden">
-            <div class="col-4">
+            <div class="col-12 col-lg-4 col-md-4 col-sm-12">
               <div class="form-group container-cep">
                 <label for="">CEP:</label>
                 <input id="txtCEP" type="text" class="form-control" />
@@ -474,39 +474,39 @@
                 ></a>
               </div>
             </div>
-            <div class="col-8"></div>
-            <div class="col-6">
+            <div class="col-8 no-mobile"></div>
+            <div class="col-12 col-lg-6 col-md-6 col-sm-12">
               <div class="form-group">
                 <label for="">Endereço:</label>
                 <input id="txtEndereco" type="text" class="form-control" />
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-lg-4 col-md-4 col-sm-12">
               <div class="form-group">
                 <label for="">Bairro:</label>
                 <input id="txtBairro" type="text" class="form-control" />
               </div>
             </div>
-            <div class="col-2">
+            <div class="col-12 col-lg-2 col-md-2 col-sm-12">
               <div class="form-group">
                 <label for="">Número:</label>
                 <input id="txtNumero" type="text" class="form-control" />
               </div>
             </div>
 
-            <div class="col-6">
+            <div class="col-12 col-lg-6 col-md-6 col-sm-12">
               <div class="form-group">
                 <label for="">Cidade:</label>
                 <input id="txtCidade" type="text" class="form-control" />
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-lg-4 col-md-4 col-sm-12">
               <div class="form-group">
                 <label for="">Complemento:</label>
                 <input id="txtComplemento" type="text" class="form-control" />
               </div>
             </div>
-            <div class="col-2">
+            <div class="col-12 col-lg-2 col-md-2 col-sm-12">
               <div class="form-group">
                 <label for="">UF:</label>
                 <select class="form-control" id="ddlUf">
