--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             <div class="col-12 col-lg-4 col-md-4 col-sm-12">
               <div class="form-group container-cep">
                 <label for="">CEP:</label>
-                <input id="txtCEP" type="text" class="form-control" />
+                <input id="txtCEP" type="number" class="form-control" />
                 <a
                   class="btn btn-yellow btn sm"
                   onclick="cardapio.metodos.buscarCEP()"
@@ -490,7 +490,7 @@
             <div class="col-12 col-lg-2 col-md-2 col-sm-12">
               <div class="form-group">
                 <label for="">Número:</label>
-                <input id="txtNumero" type="text" class="form-control" />
+                <input id="txtNumero" type="number" class="form-control" />
               </div>
             </div>
 
