--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <div class="wow fadeIn delay-05s">
                 <a class="btn btn-yellow mt-4 mr-3"> Ver cardápio </a>
                 <a
-                  href="#"
+                  href="#cardapio"
                   class="btn btn-white btn-icon-left mt-4"
                   id="btnLigar"
                 >
