--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -87,7 +87,9 @@
                 casa de forma rápida e segura.
               </p>
               <div class="wow fadeIn delay-05s">
-                <a class="btn btn-yellow mt-4 mr-3"> Ver cardápio </a>
+                <a href="#cardapio" class="btn btn-yellow mt-4 mr-3">
+                  Ver cardápio
+                </a>
                 <a
                   href="#cardapio"
                   class="btn btn-white btn-icon-left mt-4"
